# dns_server

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  main.c  server.c
make_response/: make_response.c  make_response.h
parse_request/: parse_request.c  parse_request.h
parse_zonefile/: Makefile  zone.c  zone.h
parser_options/: Makefile  opt.c  opt.h
server/: serv_helpers.c  serv_helpers.h  server.c  server.h
